Enabled caching support.

--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -13,6 +13,7 @@
         %h1=link_to "Padrino Admin", url(:base_index)
         #user-navigation
           %ul.wat-cf
+            %li=link_to pat(:restart), url(:base, :restart)
             %li=link_to pat(:profile), url(:accounts, :edit, :id => current_account.id)
             %li=link_to pat(:logout), url(:sessions, :destroy), :method => :delete
         #main-navigation
