--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,8 +4,8 @@
     %title=title
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html', :name => "description", :content => description}
     %link{:href => url(:blog, :rss), :rel => :alternate, :title => :rss, :type => "application/rss+xml"}
-    =stylesheet_link_tag "reset", "text", "960", "highlighter", "padrino"
-    =javascript_include_tag "top_up-min"
+    =stylesheet_link_tag "reset", "text", "960", "highlighter", "padrino", :cache => "padrino-bundle"
+    =javascript_include_tag "top_up-min", :cache => "padrino-bundle"
   %body
     .ribbon=link_to image_tag("screencast.png", :alt => key_density("Watch our Blog Tutorial Screencast")), "/guides/blog-tutorial"
     .container_16
@@ -13,7 +13,7 @@
         .grid_4.alpha=link_to image_tag("padrino.jpg", :alt => key_density, :height => 100), url(:base, :index)
         .grid_12.omega
           %ul.menu
-            %li=link_to "CODE", "https://github.com/padrino/padrino-framework"
+            %li=link_to "CODE", "https://github.com/padrino/padrino-framework", :target => :_blank
             %li=link_to "BLOG", url(:blog, :index)
             %li=link_to "GUIDES", url(:guides, :index)
             %li=link_to "API", url(:base, :api), :target => :_blank
