--- a/admin/views/categories/index.haml
+++ b/admin/views/categories/index.haml
@@ -20,7 +20,7 @@
             %td.last
               =button_to pat(:edit), url(:categories, :edit, :id => category.id), :method => :get, :class => :button_to 
               ="|"
-              =button_to pat(:delete), url(:categories, :destroy, :id => category.id), :method => :delete, :class => :button_to
+              =button_to pat(:delete), url(:categories, :destroy, :id => category.id), :method => :delete, :class => :button_to, :onsubmit => "return confirm('#{pat(:confirm)}')"
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
