--- a/admin/views/guides/index.haml
+++ b/admin/views/guides/index.haml
@@ -26,7 +26,7 @@
               %td.last
                 =button_to pat(:edit), url(:guides, :edit, :id => guide.id), :method => :get, :class => :button_to
                 ="|"
-                =button_to pat(:delete), url(:guides, :destroy, :id => guide.id), :method => :delete, :class => :button_to
+                =button_to pat(:delete), url(:guides, :destroy, :id => guide.id), :method => :delete, :class => :button_to, :onsubmit => "return confirm('#{pat(:confirm)}')"
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
