--- a/admin/views/page_labels/index.haml
+++ b/admin/views/page_labels/index.haml
@@ -21,7 +21,7 @@
             %td.last
               =button_to pat(:edit), url(:page_labels, :edit, :id => page_label.id), :method => :get, :class => :button_to 
               ="|"
-              =button_to pat(:delete), url(:page_labels, :destroy, :id => page_label.id), :method => :delete, :class => :button_to
+              =button_to pat(:delete), url(:page_labels, :destroy, :id => page_label.id), :method => :delete, :class => :button_to, :onsubmit => "return confirm('#{pat(:confirm)}')"
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
