--- a/admin/views/pages/index.haml
+++ b/admin/views/pages/index.haml
@@ -29,7 +29,7 @@
               %td.last
                 =button_to pat(:edit), url(:pages, :edit, :id => page.id), :method => :get, :class => :button_to
                 ="|"
-                =button_to pat(:delete), url(:pages, :destroy, :id => page.id), :method => :delete, :class => :button_to
+                =button_to pat(:delete), url(:pages, :destroy, :id => page.id), :method => :delete, :class => :button_to, :onsubmit => "return confirm('#{pat(:confirm)}')"
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
