--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -3,10 +3,8 @@
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title Padrino Admin
-    =stylesheet_link_tag :base, "themes/default/style"
-    =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
-    =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"
-    =javascript_include_tag :application
+    =stylesheet_link_tag "base", "themes/default/style"
+    =javascript_include_tag "jquery", "application"
   %body
     #container
       #header
