--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -4,7 +4,8 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title Padrino Admin
     =stylesheet_link_tag "base", "themes/default/style"
-    =javascript_include_tag "jquery", "application"
+    =javascript_include_tag_jquery :ui => true, :cache => 'jquery.min'
+    =javascript_include_tag "application"
   %body
     #container
       #header
