--- a/public/stylesheets/padrino.css
+++ b/public/stylesheets/padrino.css
@@ -50,5 +50,7 @@ h1.slogan{margin:40px 0px 40px 0px;font-size:24px;text-align:right;}
 .feature{padding:10px;background-color:#FFF;width:650px;margin-bottom:30px;}
 .display-none{display:none}
 .ribbon{position:absolute;top:0px;right:0px;}
+.underline a{text-decoration:underline}
+.underline a:hover{text-decoration:none}
 /* Debug */
 /*.container_16 {background: #fff url(/images/16_col.gif) repeat-y;*/
