solve Encoding::UndefinedConversionError
change special characters of copyright

--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -27,7 +27,7 @@
           #footer
             .block
               %p
-                Copyright ©
+                Copyright &copy;
                 =Time.now.year
                 =link_to "Padrino v.#{Padrino.version}", "http://padrino.github.com", :target => :_blank
         #sidebar=yield_content :sidebar
